# occt-learning

./: CMakeLists.txt  LICENSE  Makefile  README  main  main.cpp  tutorial.cpp
